--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bevy = "0.16.0"
 bevy_fly_camera = "0.16.0"
+bevy_panorbit_camera = "0.26.0"
 
 [profile.dev]
 opt-level = 1
