--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 bevy = "0.16.0"
 bevy_fly_camera = "0.16.0"
 bevy_panorbit_camera = "0.26.0"
+fastnoise-lite = "1.1.1"
 
 [profile.dev]
 opt-level = 1
